src/components/Form/style.css
header {
  background: #f8f9fa;
  box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
  display: flex;
  align-items: center;
  padding: 12px;
  justify-content: space-around;
  animation: fade 1s forwards;
}
header > h1 {
  margin: 0;
}
.titleBlack {
  color: black;
}
.logoutButton {
  background: #e9ecef;
  border: 1.4px solid #e9ecef;
  box-sizing: border-box;
  border-radius: 8px;
  color: #868e96;
  padding: 10px;
}
main {
  /* display: flex; */
  justify-content: center;
  margin-top: 50px;
  animation: fade 1s forwards;
}
main > .sectionForm,
main > .sectionList {
  width: 90%;
  margin: 0 auto;
}
form {
  display: flex;
  flex-direction: column;
  background: #ffffff;
  border: 1px solid #e9ecef;
  box-sizing: border-box;
  border-radius: 4px;
  padding: 20px;
}
form > label {
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 22px;
  color: #212529;
  margin: 10px 0;
}
form > input,
form > select {
  background: #f8f9fa;
  border: 2px solid #f8f9fa;
  box-sizing: border-box;
  border-radius: 8px;
  padding: 12px;
}
form > button {
  background: #fd377e;
  border: 2px solid #fd377e;
  box-sizing: border-box;
  border-radius: 8px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 19px;
  color: #ffffff;
  margin-top: 10px;
  padding: 12px;
}
button {
  cursor: pointer;
}

@media (min-width: 768px) {
  main {
    display: flex;
  }
  main > .sectionForm {
    width: 25%;
  }
  main > .sectionList {
    width: 50%;
  }
}

